--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Grin</string>
-    <string name="API_Key">AIzaSyDHupuVj0WHj-qnhLIpgcCyRm4ezkWe4Jk</string>
+    <string name="API_Key">AIzaSyBN5wz2lW_s1gY0xW8FA65TmVQRzd4Yjpg</string>
     <string name="logo">TODO</string>
     <string name="app_title">GRIN</string>
     <string name="slogan">Share more, Don\'t waste</string>
@@ -65,6 +65,7 @@
     <string name="food">Food</string>
     <string name="non_food">Non_Food</string>
     <string name="upload_from_gallery">Upload from gallery</string>
+    <string name="set_pickup_location">Set Pickup Location</string>
 
     <string-array name="list_duration">
         <item>1 Hour</item>
@@ -116,5 +117,7 @@
         <item>4 Day</item>
         <item>5 Day</item>
     </string-array>
+    <string name="title_activity_maps2">Map</string>
+
 
 </resources>
